Some refactoring, additional comments, and test updates

--- a/tests/tool/Integration.Tests/IntegrationScenarios/AspNetSample/csharp/Original/Views/Home/Index.cshtml
+++ b/tests/tool/Integration.Tests/IntegrationScenarios/AspNetSample/csharp/Original/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using System.Web
+@using System
+
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -11,6 +14,9 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
+        @{ 
+            var x = new System.Web.Mvc.ActionResult();
+        }
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
