Fix how using statements are found by IdentifierUpgradeCodeFixer

--- a/tests/tool/Integration.Tests/IntegrationScenarios/AspNetSample/csharp/Upgraded/Views/Home/Index.cshtml
+++ b/tests/tool/Integration.Tests/IntegrationScenarios/AspNetSample/csharp/Upgraded/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Mvc
-@using System
+﻿@using System
 
 @{
     ViewBag.Title = "Home Page";
@@ -15,7 +14,7 @@
     <div class="col-md-4">
         <h2>Getting started</h2>
         @{ 
-            var x = new Microsoft.AspNetCore.Mvc.ActionResult();
+            var x = new ActionResult();
         }
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
