--- a/tests/tool/Integration.Tests/IntegrationScenarios/AspNetSample/csharp/Upgraded/Views/Home/Index.cshtml
+++ b/tests/tool/Integration.Tests/IntegrationScenarios/AspNetSample/csharp/Upgraded/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     <div class="col-md-4">
         <h2>Getting started</h2>
         @{ 
-            var x = new ActionResult();
+            var x = new Microsoft.AspNetCore.Mvc.ActionResult();
         }
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
