--- a/src/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows/Templates/WinAppSDKTemplates/MainWindow.xaml
+++ b/src/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows/Templates/WinAppSDKTemplates/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window
-    x:Class="WinUIMigrationSample.MainWindow"
+    x:Class="$AppName.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:WinUIMigrationSample"
+    xmlns:local="using:$AppName"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
